# mnemostroma

./: .gitignore  .mcp.json  ACTIVATE_AGENT_MEMORY.txt  ADR_001_script_vs_model.md  ALPHA_TESTING.md  API_REFERENCE.md  CHANGELOG.md  CLAUDE.md  CLAUDE_AI_SETUP.md  CONTRIBUTING.md  CONTRIBUTING_INTERNAL2.md  GIT_RULES.md  GIT_RULES_v4.2.md  INDEX_v4.md  INDEX_v5.md  LICENSE  MCP_TOOLS_MAP.md  MNEMOSTROMA_TODO_v2.md  MNEMOSTROMA_TODO_v3.md  MNESTROMA_WEAK_POINTS_v3.md  NOTICE.md  PYTHON313_SETUP_FIX.md  Project_mnemostroma.code-workspace  QUICKSTART_DEVELOPER.md  README.md  README_RU.md  RELEASE_GUARDS.md  SPEC_DREAMER_PHASE2.md  SYSTEM_ASSESSMENT.md  TREE.txt  UPGRADE.md  USE_CASES.md  agent_integration_specification_v2.md  api_tools_specification.md  architecture_overview.md  architecture_patch_v1.4.md  behavioral_test_specification.md  benchmark_plan.md  brand.md  cloud_sync_specification.md  (+28 more)
.agents/: README.md
.claude/: settings.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
REFACTORING_MNEMO/: CONTRACT_REGISTRY.md  DEPENDENCY_MAP.md  LATENCY_INVARIANTS.md  baseline_test_report.txt  task.md
analytics/: README.md  generate_v2_report.py
analytics/reports/: metrics_aggregated.csv  metrics_aggregated_v2.csv  session_analysis_v1.md  session_analysis_v2.md
contracts/: mcp_tools_v1.json
docs/: ADR_002_replace_hnsw_with_embedder.md  AGENT_DOC_UPDATE_PLAN.md  API_REFERENCE.md  CHECKLIST_v2.md  CLAUDE_AI_SETUP.md  CONTEXT_TRANSFER_v5.md  DAEMON_TOOLS_PLAN.md  EMOTIONAL_PATTERNS_SPEC.md  EVICTION_ROADMAP.md  INTEGRATION_EXAMPLES.md  MASTER_ROADMAP.md  MCP_API_AUDIT_ROADMAP.md  MEMORY_MODEL_v2.md  MEMORY_SPEC_v2.md  QUICKSTART_DEVELOPER.md  ROADMAP_v2.md  ROADMAP_архитектура_2026-04-01.md  SPEC_anchor_guardian_v1.0.md  SPEC_associative_surfacing_v1.0.md  SPEC_logging_telemetry_v1.0.md  SPEC_mcp_stdio_adapter_patch_v1.1.md  SPEC_open_loop_detector_v1.0.md  SPEC_precision_guard_v1.0.md  SPEC_proxy_passthrough_v1.0.md  SPEC_session_closure_trigger_v1.0.md  SPEC_temporal_retrieval_v1.0.md  SPEC_urgency_pulse_v1.0.md  TRAY_AND_EXTENSION_GUIDE.md  api_tools_specification_v2.md  api_tools_urgency_policy_v1.3.md  perplexity_mcp_spec.md  Аудит_Клауде_Мнемострома_2026-04-01.md
docs/mcp/: MCP_CLIENT_CONFIGS.md  MCP_TOOLS_MAP.md  SPEC_http_daemon_embed_v1.0.md  SPEC_sse_daemon_embed_v1.1.md  serveo_perplexity_none_auth_guide.md
docs/tunnel/: 11 Compatibility Patch.md  (+1 more)
examples/: README.md
integrations/: README.md
profiling/: README.md
release/: HOW_TO_RELEASE.md  QUICKSTART_v1.11.0.md  QUICKSTART_v1.11.1.md  QUICKSTART_v1.11.2.md  QUICKSTART_v1.8.4.md  QUICKSTART_v1.8.5.md  QUICKSTART_v1.9.1.md  QUICKSTART_v2.0.5.md  QUICKSTART_v2.3.2.md  QUICKSTART_v2.4.0.md  RELEASE_NOTES_v1.11.0.md  RELEASE_NOTES_v1.11.1.md  RELEASE_NOTES_v1.11.2.md  RELEASE_NOTES_v1.8.4.md  RELEASE_NOTES_v1.8.5.md  RELEASE_NOTES_v1.9.1.md  RELEASE_NOTES_v2.0.5.md  RELEASE_NOTES_v2.3.2.md  RELEASE_NOTES_v2.4.0.md  SYSTEM_ASSESSMENT.md  SYSTEM_ASSESSMENT_v1.11.0.md  SYSTEM_ASSESSMENT_v1.11.1.md  SYSTEM_ASSESSMENT_v1.11.2.md  SYSTEM_ASSESSMENT_v1.8.5.md  SYSTEM_ASSESSMENT_v1.9.1.md  SYSTEM_ASSESSMENT_v2.0.5.md  SYSTEM_ASSESSMENT_v2.3.2.md  SYSTEM_ASSESSMENT_v2.4.0.md  Первый_релиз.md
scripts/: README.md  audit.sh  audit_version_check.py  check_windows_scripts.py  clean-zombies.py  identify_leak.py  install-daemon.sh  install-windows.bat  install-windows.ps1  install_systemd.sh  issue_build.py  mnemo-health.sh  mnemostroma-proxy.service  scp_to_windows.py  serveo_manager.py  strip_logs_v2.py  sync_extension.py  uninstall-windows.bat  uninstall-windows.ps1  update.sh  update_version.py
tests/: test_anchor.py  test_anchor_decay.py  test_auto_bridge.py  test_basic.py  test_behavioral.py  test_bridge.py  test_content.py  test_content_branch_observer.py  test_continuation_detector.py  test_daemon_infra.py  test_data_contracts.py  test_dim_migration.py  test_dissolver.py  test_dreamer_phase2.py  test_emotional_patterns.py  test_entities.py  test_extension_install.py  test_extension_integration.py  test_extension_regression.py  test_flag_detector.py  test_golden_standards.py  test_growth.py  test_ipc_server.py  test_manifest.py  test_marker.py  test_mcp_coverage.py  test_mcp_hot_reload.py  test_mcp_http_adapter_patch.py  test_mcp_oauth_adapter.py  test_mcp_oauth_adapter_spec.py  test_mcp_routing.py  test_mcp_sprint1.py  test_mcp_sprint3.py  test_mcp_sse_auth.py  test_memory_intent.py  test_memory_layers.py  test_mention_type_b3.py  test_multiuser_tunnels.py  test_observer.py  test_package_data.py  (+36 more)
(+249 files in other folders)
