[project]
name = "mnemostroma"
version = "0.1.0"
description = "Autonomous memory layer for AI agents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "onnxruntime>=1.17",
    "tokenizers>=0.15",
    "numpy>=1.24",
    "hnswlib>=0.8",
    "lz4>=4.0",
    "aiosqlite>=0.19",
    "gliner>=0.2",
    "huggingface-hub>=0.20",
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
