[project]
name = "mnemostroma"
version = "0.1.0"
description = "Autonomous memory layer for AI agents"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "onnxruntime>=1.17",
    "tokenizers>=0.15",
    "numpy>=1.24",
    "lz4>=4.0",
    "aiosqlite>=0.19",
    "huggingface-hub>=0.20",
    "psutil>=5.9",
    "mcp>=1.0",
]

[project.scripts]
mnemostroma = "mnemostroma.__main__:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
tray = [
    "pystray>=0.19",
    "pillow>=10.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mnemostroma = ["config_default.json", "models_manifest.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
