[project]
name = "mnemostroma"
version = "1.8.2"
description = "Autonomous memory layer for AI agents — offline, RAM-first, no cloud"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "FSL-1.1-MIT" }
authors = [
    { name = "GG-QandV" }
]
keywords = [
    "ai", "agent", "memory", "mcp", "llm", "onnx",
    "context", "rag", "semantic-search", "offline"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Environment :: Console",
    "Typing :: Typed",
]
dependencies = [
    "onnxruntime>=1.17",
    "tokenizers>=0.15",
    "numpy>=1.24",
    "lz4>=4.0",
    "aiosqlite>=0.19",
    "huggingface-hub>=0.20",
    "psutil>=5.9",
    "mcp>=1.0",
]

[project.urls]
Homepage    = "https://github.com/GG-QandV/mnemostroma"
Repository  = "https://github.com/GG-QandV/mnemostroma"
Issues      = "https://github.com/GG-QandV/mnemostroma/issues"
Changelog   = "https://github.com/GG-QandV/mnemostroma/blob/main/CHANGELOG.md"

[project.scripts]
mnemostroma = "mnemostroma.__main__:cli"

[project.optional-dependencies]
sse = [
    "starlette>=0.36",
    "uvicorn>=0.27",
    "httpx>=0.27",
    "cryptography>=42.0",
]
tray = [
    "PyQt6>=6.0",
    "pillow>=10.0",
]
watch = []
all = [
    "starlette>=0.36",
    "uvicorn>=0.27",
    "httpx>=0.27",
    "cryptography>=42.0",
    "PyQt6>=6.0",
    "pillow>=10.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pip-audit>=2.7",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mnemostroma = [
    "config_default.json",
    "models_manifest.json",
    "py.typed",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
target-version = "py312"
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = false
files = ["src/mnemostroma"]
ignore_missing_imports = true

[tool.importlinter]
root_package = "mnemostroma"

[[tool.importlinter.contracts]]
name = "Domain isolation"
type = "forbidden"
source_modules = ["mnemostroma.domain"]
forbidden_modules = [
    "mnemostroma.adapters",
    "mnemostroma.ports",
    "aiosqlite",
    "onnxruntime",
    "numpy",
    "asyncio"
]
